--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,21 +33,21 @@ jobs:
         with:
           commit_message: stylish-haskell auto-commit
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up HLint
-        uses: haskell-actions/hlint-setup@v2
-        with:
-          version: '3.1.6'
-
-      - name: Run HLint
-        uses: haskell-actions/hlint-run@v2
-        with:
-          path: '["src/", "test/"]'
-          fail-on: warning
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #
+  #     - name: Set up HLint
+  #       uses: haskell-actions/hlint-setup@v2
+  #       with:
+  #         version: '3.1.6'
+  #
+  #     - name: Run HLint
+  #       uses: haskell-actions/hlint-run@v2
+  #       with:
+  #         path: '["src/", "test/"]'
+  #         fail-on: warning
 
   build-wasm:
     name: GHC 9.12 on WASM
