--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,21 +33,21 @@ jobs:
         with:
           commit_message: stylish-haskell auto-commit
 
-  # lint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #
-  #     - name: Set up HLint
-  #       uses: haskell-actions/hlint-setup@v2
-  #       with:
-  #         version: '3.1.6'
-  #
-  #     - name: Run HLint
-  #       uses: haskell-actions/hlint-run@v2
-  #       with:
-  #         path: '["src/", "test/"]'
-  #         fail-on: warning
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up HLint
+        uses: haskell-actions/hlint-setup@v2
+        with:
+          version: '3.1.6'
+
+      - name: Run HLint
+        uses: haskell-actions/hlint-run@v2
+        with:
+          path: '["src/", "test/"]'
+          fail-on: warning
 
   # build-wasm:
   #   name: GHC 9.12 on WASM
@@ -81,18 +81,53 @@ jobs:
   #         wasm32-wasi-cabal build all
 
   build:
-    name: Stack on ${{ matrix.os }}
+    name: GHC ${{ matrix.ghc-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+        ghc-version: ['9.12.2']
     steps:
       - uses: actions/checkout@v4
 
-      - uses: freckle/stack-action@v5
+      - name: Set up GHC ${{ matrix.ghc-version }}
+        uses: haskell-actions/setup@v2
+        id: setup
         with:
-          stack-build-arguments: ${{ github.ref_name != 'main' && '--fast' || '' }} --pedantic
+          ghc-version: ${{ matrix.ghc-version }}
+
+      - name: Configure the build
+        run: |
+          cabal configure --enable-tests --enable-benchmarks --disable-documentation
+          cabal build all --dry-run
+
+      - name: Restore cached dependencies
+        uses: actions/cache/restore@v4
+        id: cache
+        env:
+          key: ${{ runner.os }}-ghc-${{ steps.setup.outputs.ghc-version }}-cabal-${{ steps.setup.outputs.cabal-version }}
+        with:
+          path: ${{ steps.setup.outputs.cabal-store }}
+          key: ${{ env.key }}-plan-${{ hashFiles('**/plan.json') }}
+          restore-keys: ${{ env.key }}-
+
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: cabal build all --only-dependencies
+
+      - name: Save cached dependencies
+        uses: actions/cache/save@v4
+        if: steps.cache.outputs.cache-hit != 'true'
+        with:
+          path: ${{ steps.setup.outputs.cabal-store }}
+          key: ${{ steps.cache.outputs.cache-primary-key }}
+
+      - name: Build
+        run: cabal build all
+
+      - name: Run tests
+        run: cabal test all
 
       - name: Check cabal file
         run: cabal check
