--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,9 +101,9 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install openblas
-          ls /opt/homebrew/opt/openblas/lib/pkgconfig
-          echo "PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/opt/homebrew/opt/openblas/lib/pkgconfig" >> $GITHUB_ENV
-          pkg-config --list-all
+          export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/opt/homebrew/opt/openblas/lib/pkgconfig"
+          echo "PKG_CONFIG_PATH=$PKG_CONFIG_PATH" >> $GITHUB_ENV
+          pkg-config --exists "openblas"
       - name: Set up GHC ${{ matrix.ghc-version }}
         uses: haskell-actions/setup@v2
         id: setup
@@ -112,7 +112,6 @@ jobs:
 
       - name: Configure the build
         run: |
-          echo "$PKG_CONFIG_PATH"
           cabal configure --enable-tests --enable-benchmarks --disable-documentation
           cabal build all --dry-run
 
