--- a/ml.cabal
+++ b/ml.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      MLambda.Foreign.Utils
       MLambda.Matrix
   other-modules:
       Paths_ml
@@ -42,6 +43,8 @@ library
   build-depends:
       base >=4.7 && <5
     , blas-ffi
+    , mtl
+    , netlib-ffi
     , vector
   default-language: GHC2024
 
@@ -65,6 +68,8 @@ test-suite ml-test
       base >=4.7 && <5
     , blas-ffi
     , ml
+    , mtl
+    , netlib-ffi
     , tasty
     , tasty-hunit
     , vector
