--- a/package.yaml
+++ b/package.yaml
@@ -23,6 +23,8 @@ dependencies:
 - base >= 4.7 && < 5
 - vector
 - blas-ffi
+- netlib-ffi
+- mtl
 
 ghc-options:
 - -Wall
@@ -37,6 +39,8 @@ ghc-options:
 
 library:
   source-dirs: src
+  other-modules:
+  - MLambda.Foreign.Utils
 
 tests:
   ml-test:
