+ massiv version & benchmark

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,6 +129,9 @@ jobs:
       - name: Run tests
         run: cabal test all
 
+      - name: Run benchmarks
+        run: cabal bench all
+
       - name: Check cabal file
         run: cabal check
 
