--- a/package.yaml
+++ b/package.yaml
@@ -21,11 +21,13 @@ description:         Please see the README on GitHub at <https://github.com/necl
 
 dependencies:
 - base >= 4.7 && < 5
-- vector
 - blas-ffi
+- deepseq
+- massiv
+- mtl
 - netlib-ffi
 - template-haskell
-- mtl
+- vector
 
 ghc-options:
 - -Wall
@@ -42,6 +44,18 @@ library:
   source-dirs: src
   other-modules:
   - MLambda.Foreign.Utils
+
+benchmarks:
+  ml-bench:
+    main:                Bench.hs
+    source-dirs:         bench
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - ml
+    - tasty-bench
 
 tests:
   ml-test:
