move value to separate TypeLits module

--- a/ml.cabal
+++ b/ml.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:
       MLambda.Massiv
       MLambda.Matrix
+      MLambda.TypeLits
   other-modules:
       MLambda.Foreign.Utils
   hs-source-dirs:
