--- a/package.yaml
+++ b/package.yaml
@@ -29,6 +29,8 @@ dependencies:
 - template-haskell
 - vector
 - haskell-src-meta
+- singletons
+- singletons-base
 
 ghc-options:
 - -Wall
@@ -72,6 +74,9 @@ tests:
     - ml
     - tasty
     - tasty-hunit
+    - falsify
+    - singletons
+    - singletons-base
 
 language: GHC2024
 default-extensions:
