--- a/package.yaml
+++ b/package.yaml
@@ -31,7 +31,7 @@ dependencies:
 - haskell-src-meta
 - singletons
 - singletons-base
-- ghc-typelits-natnormalise
+# - ghc-typelits-natnormalise
 
 ghc-options:
 - -Wall
